--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
 	<!-- This is a comment! Text here will be ignored by the browser. -->
 	<meta charset="UTF-8">
 	<title>Cosano</title>
-	<link href="myCSS.css" rel="stylesheet" type="text/css">
+	<link href="Cosano.css" rel="stylesheet" type="text/css">
 <script type="text/javascript">
 function MM_swapImgRestore() { //v3.0
   var i,x,a=document.MM_sr; for(i=0;a&&i<a.length&&(x=a[i])&&x.oSrc;i++) x.src=x.oSrc;
