--- a/Index.html
+++ b/Index.html
@@ -29,19 +29,17 @@ function MM_swapImage() { //v3.0
 }
 </script>
 </head>
-<body onLoad=   >
+</body>
 <div class="container">
   <div class="header">
-  	<img src=     >
 </div>
   <div class="nav">
     <h3><a href="Home"></a>
   </div>
   <div class="content">
   <h5><a href="Welcome to Cosano, a budding game reviewing website. Here, like any reviewing website, you can find reviews of select games. Each review analyzes the different aspects of a game and compares it with others to deliver an accurate description and critique of what a game delivers. Games are rated on a scale from 1 to 100 with 100 being a game of peak quality that surpasses all others in its design, execution, and entertainment. Use the search bar to find a game and its review."> </h5>
-	<br><img src=    ></br>
   <div class="footer">
-    <h4><a href=  > </a> | <a href="mailto:consoelberg@gmail.com">Contact</a> | Copyright 2022</h4>
+    <h4> <a href="mailto:consoelberg@gmail.com">Contact</a> | Copyright 2022</h4>
   </div>
 </div>
 </body>
